--- a/NetCoreSocket/SocketServer/SocketServer/SocketServer.csproj
+++ b/NetCoreSocket/SocketServer/SocketServer/SocketServer.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="NetData">
+      <HintPath>..\..\LIb\netcoreapp2.1\NetData.dll</HintPath>
+    </Reference>
+    <Reference Include="ServerCommon">
+      <HintPath>..\..\LIb\netcoreapp2.1\ServerCommon.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
