--- a/NetCoreSocket/SocketClient/SocketClient/SocketClient.csproj
+++ b/NetCoreSocket/SocketClient/SocketClient/SocketClient.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="NetData">
-      <HintPath>..\..\LIb\netcoreapp2.1\NetData.dll</HintPath>
+    <Reference Include="GameService">
+      <HintPath>..\..\LIb\netcoreapp3.1\GameService.dll</HintPath>
     </Reference>
   </ItemGroup>
 
